--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                         <div class="col-lg-3 col-md-2">
                             <!-- Logo -->
                             <div class="logo">
-                                <a href="index.html"><img src="@Url.Content("~/img/logo/smilelogo.png")" alt=""></a>
+                                <a asp-action="index" asp-controller="Home"><img src="@Url.Content("~/img/logo/smilelogo.png")" alt=""></a>
                             </div>
                         </div>
                         <div class="col-lg-9 col-md-9">
